[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ValveFit"
version = "0.1"
authors = [{name = "Ajith Moola", email = "arma@iastate.edu"}, ]
readme = "README.md"
dependencies = []
description = "ValveFit: An analysis-suitable B-spline based surface fitting
framework for patient-specific modeling of tricuspid valves"

[tool.flit.sdist]
include = ["bootstrap_install.py", "build_dists.py"]